--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,95 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header {
+  padding: 15px 0;
+  margin-bottom: 50px;
+
+  background-color: lightblue;
+
+}
+
+main {
+  margin: 50px 0;
+}
+
+hr {
+  margin: 20px 0;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+}
+
+.justify-space-between {
+  justify-content: space-between;
+}
+
+.bg-blue {
+  background-color: blue;
+}
+
+.bg-red {
+  background-color: red;
+}
+
+.bg-silver {
+  background-color: silver;
+}
+
+.bg-goldenrod {
+  background-color: goldenrod;
+}
+
+
+.col-25 {
+  width: 25%;
+}
+
+
+.col-75 {
+  width: 75%;
+}
+
+.col-20 {
+  width: 20%;
+}
+
+.col-60 {
+  width: 60%;
+}
+
+.col-25.bg-blue,
+.col-75.bg-red {
+  height: 100px;
+}
+
+.left,
+.right,
+.center {
+  height: 300px;
+}
+
+.left {
+  width: 25%;
+}
+
+.right {
+  width: 75%;
+}
+
+.center {
+  width: 50%;
+}
+
+.col-20.bg-silver,
+.col-60.bg-goldenrod {
+  height: 300px;
+}
+
+.gap-20 {
+  gap: 20px;
+}
